--- a/Application/install/views/index.html
+++ b/Application/install/views/index.html
@@ -41,14 +41,14 @@ h1{
             display: inline-block;
             margin-left: 10px;
             color: #666;}
-        button{
+        .cmd button,button{
             display: inline-block;
             line-height: 30px;
             padding-left: 10px;cursor: default;
             padding-right: 10px;
             color: #999;
             border: none;}
-        button.active{
+        .cmd button,button.active{
             background-color: #0099ff;
             color: #fff;cursor: pointer;
         }
@@ -63,19 +63,44 @@ h1{
         .left-bd{
             margin-right: 160px;}
         .tips{
-            display: inline-block;
-            line-height: 30px;
+            display: block;
+            line-height:22px;
             font-size: 12px;
             color: #666;}
         p.dependencies{
             color: #444;
             font-size: 14px;
             line-height: 25px;}
+        .cmd{
+            margin-bottom: 5px;}
+        .cmd button{
+            font-size: 12px;
+            margin-left: 10px;}
+        #cmd{
+            font-size: 12px;
+            color: #666;
+            line-height: 25px;
+            padding-left: 10px;}
     </style>
     <script>
+        var shellLock=1;
         var vm=avalon.define({
             $id:'app',
             list:[],
+            code:'pm2 restart',
+            send:function(){//发送命令
+            if(shellLock){
+                shellLock=0;
+                $.post('./main/shell', {code:vm.code}, function (data) {
+                    if (!data.error) {
+                        alert('执行成功！');
+                    }else{
+                        alert(data.error);
+                    }
+                    shellLock=1;
+                })
+            }
+            },
             install:function(el){//安装命令
                 if(el.type==2) {
                     el.type=22;
@@ -112,9 +137,13 @@ h1{
     </script>
 </head>
 <body>
+
 <h1>MKOA 简易模块安装</h1>
-<p class="tips">注意:卸载模块有可能影响依赖其的模块</p>
 <div ms-controller="app">
+<!--<div class="cmd"><input type="text" id="cmd" ms-duplex="code"/><button ms-click="send">执行命令</button></div>-->
+<p class="tips">包含中间件的模块，安装/卸载后需要重启服务</p>
+<p class="tips">注意:卸载模块有可能影响依赖其的模块</p>
+
 <div class="list" ms-repeat="list">
     <div class="left-bd">
         <h3>{{el.name}}<span>[{{el.folder}}]</span> <span>{{el.author?'作者：'+el.author:'无特别说明'}}</span></h3>
